# RangeFilteredANN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  categorical_range_index.py  generate_random_filters.py  parlay_interface.ipynb  plot.py  prototype.py  range_index.py  range_index_experiment.py  requirements.txt  setup.py  spatial_index.py  test.ipynb  test_beamsearch.py  testing_nn_scaling.py  utils.py
DiskANN/: compile_commands.json  setup.py
DiskANN/include/: index.h  index_config.h  neighbor.h
DiskANN/scripts/: generate-compile-commands.sh
DiskANN/src/: CMakeLists.txt  distance.cpp  in_mem_graph_store.cpp  index.cpp  neighbor.cpp
ParlayANN/python/: _builder.py  module.cpp  multi_thread_count.sh  old_serial_query.h  range_test.py  wrapper.py
artifacts/: redcaps-512-angular_queries.npy
experiments/: README  all_memories.py  b_plot.ipynb  create_table.py  docker-compose.yml  memory_footprint.py  milvus.yaml  msvbase.md  plot.py  plot_adversarial.py  range_test.py  run_all_memories.sh  run_milvus.py  run_msvbase.py  run_our_method.py  testing_nn_scaling.py  wrapper.py
experiments/other/: analyzing_stored_graphs.py  (+1 more)
generate_datasets/: convert_to_msvbase.py  download_redcaps.py  filter_generation_utils.py  generate_advserial_dataset.py  generate_ann_benchmarks_datasets.py  generate_redcaps_data.py  generate_redcaps_filters.py  generate_redcaps_queries.py
python_bindings/: python_bindings.cpp
src/: filtered_dataset.h  postfilter_vamana.h  prefiltering.cpp  prefiltering.h  range_filter_tree.h  super_optimized_postfilter_tree.h  tree_utils.h
tests/: test_milvus_connection.py  test_msvbase_connection.py
triangle_experiments/: test.py
(+16 files in other folders)
